Added create tag feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "python.linting.flake8Enabled": true,
-    "python.pythonPath": "./.venv/bin/python3"
+    "python.pythonPath": "./.venv/bin/python3",
+    "python.linting.pylintArgs": [
+        "--load-plugins=pylint_django",
+        "--max-parents=25",
+        "--disable=C0111"
+    ]
 }
