--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.linting.flake8Enabled": true,
-    "python.pythonPath": "./.venv/bin/python3",
+    "python.pythonPath": "venv/bin/python3",
     "python.linting.pylintArgs": [
         "--load-plugins=pylint_django",
         "--max-parents=25",
